[package]
name = "chaincode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", default-features = false, features = ["termion","console", "date"] }
reqwest = { version = "0.11", features = ["json"] }

serde = {version = "1.0.188", features = ["derive","serde_derive"]}
tokio = { version = "1", features = ["full"] }

